--- a/app/src/main/res/layout/fragment_heartbeat.xml
+++ b/app/src/main/res/layout/fragment_heartbeat.xml
@@ -70,6 +70,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guidelineCenter" />
     <Button
+        android:id="@+id/buttonStart"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_56"
         android:layout_margin="@dimen/dp_24"
@@ -83,7 +84,7 @@
         android:layout_marginBottom="@dimen/dp_40"
         android:gravity="center"
         android:padding="@dimen/dp_16"
-        android:text="@string/the_latest_measurement"
+        android:text="@string/title_the_latest_measurement"
         android:textColor="@color/colorWhileDark"
         android:textSize="@dimen/dp_14"
         app:layout_constraintBottom_toBottomOf="parent" />
