--- a/app/src/main/res/layout/fragment_heartbeat.xml
+++ b/app/src/main/res/layout/fragment_heartbeat.xml
@@ -1,48 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhile">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineCenter"
+    <Button
+        android:id="@+id/buttonStart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        android:layout_height="@dimen/dp_56"
+        android:layout_margin="@dimen/dp_24"
+        android:background="@color/colorRed"
+        android:text="@string/label_start"
+        android:textColor="@color/colorWhile"
+        app:layout_constraintTop_toBottomOf="@id/textViewHelp" />
+
     <ImageView
         android:id="@+id/imageHeart"
         android:layout_width="@dimen/dp_16"
         android:layout_height="@dimen/dp_16"
         android:layout_gravity="center"
-        android:src="@drawable/ic_heart_red"
+        android:src="@drawable/ic_heart_dark"
         app:layout_constraintBottom_toTopOf="@id/textRateNumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-    <TextView
-        android:id="@+id/textRateNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/text_rate_original"
-        android:textColor="@color/colorRed"
-        android:textSize="@dimen/sp_40"
-        app:layout_constraintBottom_toBottomOf="@id/progressBarTime"
-        app:layout_constraintEnd_toEndOf="@id/progressBarTime"
-        app:layout_constraintStart_toStartOf="@id/progressBarTime"
-        app:layout_constraintTop_toTopOf="@id/progressBarTime"
-        app:layout_constraintVertical_bias="0.46" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/label_bmp"
-        android:textColor="@color/colorRed"
-        android:textSize="@dimen/sp_20"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textRateNumber" />
+
     <ProgressBar
         android:id="@+id/progressBarTime"
         style="?android:attr/progressBarStyleHorizontal"
@@ -57,11 +39,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textRateNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_rate_original"
+        android:textColor="@color/colorRed"
+        android:textSize="@dimen/sp_40"
+        app:layout_constraintBottom_toBottomOf="@id/progressBarTime"
+        app:layout_constraintEnd_toEndOf="@id/progressBarTime"
+        app:layout_constraintStart_toStartOf="@id/progressBarTime"
+        app:layout_constraintTop_toTopOf="@id/progressBarTime"
+        app:layout_constraintVertical_bias="0.46" />
+
     <TextView
         android:id="@+id/textViewHelp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:minLines="2"
         android:padding="@dimen/dp_16"
         android:text="@string/title_help"
         android:textColor="@color/colorBlack"
@@ -69,15 +66,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guidelineCenter" />
-    <Button
-        android:id="@+id/buttonStart"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_56"
-        android:layout_margin="@dimen/dp_24"
-        android:background="@color/colorRed"
-        android:text="@string/label_start"
-        android:textColor="@color/colorWhile"
-        app:layout_constraintTop_toBottomOf="@id/textViewHelp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/label_bmp"
+        android:textColor="@color/colorRed"
+        android:textSize="@dimen/sp_20"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textRateNumber" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -88,6 +88,7 @@
         android:textColor="@color/colorWhileDark"
         android:textSize="@dimen/dp_14"
         app:layout_constraintBottom_toBottomOf="parent" />
+
     <TextView
         android:id="@+id/textRateLast"
         android:layout_width="match_parent"
@@ -98,5 +99,12 @@
         android:textColor="@color/colorWhileDark"
         android:textSize="@dimen/dp_14"
         app:layout_constraintBottom_toBottomOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineCenter"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
