16272_Create_ui_Save_measure_heartbeat_screen

--- a/app/src/main/res/drawable/bg_circle_shape.xml
+++ b/app/src/main/res/drawable/bg_circle_shape.xml
@@ -5,6 +5,6 @@
     android:shape="ring"
     android:thickness="@dimen/dp_6"
     android:useLevel="false">
-    <solid android:color="@color/colorWhileDark" />
+    <solid android:color="@color/colorDark" />
 
 </shape>
