--- a/app/src/main/res/layout/fragment_heartbeat.xml
+++ b/app/src/main/res/layout/fragment_heartbeat.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_56"
         android:layout_margin="@dimen/dp_24"
-        android:background="@color/colorRed"
+        android:background="@drawable/bg_rectangle"
         android:text="@string/label_start"
         android:textColor="@color/colorWhile"
         app:layout_constraintTop_toBottomOf="@id/textViewHelp" />
@@ -85,7 +85,7 @@
         android:gravity="center"
         android:padding="@dimen/dp_16"
         android:text="@string/title_the_latest_measurement"
-        android:textColor="@color/colorWhileDark"
+        android:textColor="@color/colorDark"
         android:textSize="@dimen/dp_14"
         app:layout_constraintBottom_toBottomOf="parent" />
 
@@ -96,7 +96,7 @@
         android:layout_marginBottom="@dimen/dp_16"
         android:gravity="center"
         android:padding="@dimen/dp_16"
-        android:textColor="@color/colorWhileDark"
+        android:textColor="@color/colorDark"
         android:textSize="@dimen/dp_14"
         app:layout_constraintBottom_toBottomOf="parent" />
 
