--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="sp_18">18sp</dimen>
     <dimen name="sp_20">20sp</dimen>
     <dimen name="sp_40">40sp</dimen>
+    <dimen name="sp_48">48sp</dimen>
 
     <dimen name="dp_6">6dp</dimen>
     <dimen name="dp_10">10dp</dimen>
@@ -13,5 +14,6 @@
     <dimen name="dp_32">32dp</dimen>
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_56">56dp</dimen>
+    <dimen name="dp_100">100dp</dimen>
     <dimen name="dp_150">150dp</dimen>
 </resources>
