--- a/app/src/main/res/layout/fragment_heartbeat.xml
+++ b/app/src/main/res/layout/fragment_heartbeat.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_56"
         android:layout_margin="@dimen/dp_24"
-        android:background="@drawable/bg_rectangle"
+        android:background="@drawable/bg_rectangle_red"
         android:text="@string/label_start"
         android:textColor="@color/colorWhile"
         app:layout_constraintTop_toBottomOf="@id/textViewHelp" />
