--- a/app/src/main/res/layout/fragment_save_heartbeat.xml
+++ b/app/src/main/res/layout/fragment_save_heartbeat.xml
@@ -11,7 +11,7 @@
         android:layout_width="@dimen/dp_150"
         android:layout_height="@dimen/dp_56"
         android:layout_margin="@dimen/dp_16"
-        android:background="@drawable/bg_rectangle"
+        android:background="@drawable/bg_rectangle_red"
         android:text="@string/label_save"
         android:textColor="@color/colorWhile"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,6 +27,7 @@
         android:maxLines="2"
         android:minLines="1"
         android:padding="@dimen/dp_16"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textViewNote" />
