--- a/app/src/main/res/layout/partial_tab_pager.xml
+++ b/app/src/main/res/layout/partial_tab_pager.xml
@@ -12,6 +12,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/imageViewOption"
             android:layout_width="@dimen/dp_56"
             android:layout_height="@dimen/dp_56"
             android:padding="@dimen/dp_16"
@@ -27,7 +28,7 @@
             android:textSize="@dimen/sp_18" />
 
         <ImageView
-            android:id="@+id/imageViewOption"
+            android:id="@+id/imageViewOptionHistory"
             android:layout_width="@dimen/dp_56"
             android:layout_height="@dimen/dp_56"
             android:padding="@dimen/dp_20"
