16286_Create_UI_Language

--- a/app/src/main/res/layout/dailog_delete_note.xml
+++ b/app/src/main/res/layout/dailog_delete_note.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:gravity="center"
@@ -10,17 +11,18 @@
 
     <TextView
         android:layout_marginTop="@dimen/dp_16"
-        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginStart="@dimen/dp_16"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Ban co muon xoa ghi nho?"
+        android:text="@string/title_delete_ask"
         android:textSize="@dimen/sp_18"
         android:textColor="@color/colorBlack"
         />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        tools:ignore="UselessLeaf" />
     <LinearLayout
         android:layout_marginBottom="@dimen/dp_16"
         android:layout_width="match_parent"
@@ -29,16 +31,15 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            />
+            tools:ignore="ContentDescription" />
         <Button
             android:id="@+id/buttonDelete"
             android:background="#f1f1f1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Xoa"
-            android:textColor="@color/colorRed"
-            />
+            android:text="@string/title_delete"
+            android:textColor="@color/colorRed" />
         <Button
             android:id="@+id/buttonCancel"
             android:layout_marginLeft="@dimen/dp_16"
@@ -47,9 +48,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Huy"
-            android:textColor="@color/colorPrimary"
-            />
+            android:text="@string/title_cancel"
+            android:textColor="@color/colorPrimary" />
     </LinearLayout>
 
 </LinearLayout>
