16276_Creat_ui_history_heartbeat_screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#d4001c</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorWhile">#ffffff</color>
-    <color name="colorWhileDark">#CCCCCC</color>
+    <color name="colorWhileDark">#E2E2E2</color>
     <color name="colorDark">#797979</color>
     <color name="colorBlack">#000000</color>
     <color name="colorRed">#f53935</color>
